argo-cd/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: argocd-server-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /argo-cd
