argo-cd/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
spec:
#  entryPoints:
#    - websecure
  routes:
    - kind: Rule
      match: Host(`tiny`) && PathPrefix(`/argo-cd`)
      priority: 10
      services:
        - name: argo-cd-argocd-server
          port: 80
#      middlewares:
#        - name: argocd-server-stripprefix
    - kind: Rule
      match: Host(`tiny`) && PathPrefix(`/argo-cd`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argo-cd-argocd-server
          port: 80
          scheme: h2c
#      middlewares:
#        - name: argocd-server-stripprefix
#  tls:
#    certResolver: default
